[tool.poetry]
name = "jumpman"
version = "0.1.0"
description = ""
authors = ["Max Wood <45072525+bridges-wood@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
gym-super-mario-bros = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
